--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,11 +14,11 @@ body {
 }
 
 .gradient-bg-welcome {
-  background-color:#0f0e13;
+  background-color:#0c45e4;
   background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+    radial-gradient(at 0% 0%, rgb(65, 90, 119) 0, transparent 50%), 
+    radial-gradient(at 50% 0%, rgb(26, 70, 203) 0, transparent 50%), 
+    radial-gradient(at 100% 0%, rgb(224, 225, 221) 0, transparent 50%);
 }
 
 .gradient-bg-services {
