--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,10 +22,10 @@ body {
 }
 
 .gradient-bg-services {
-  background-color:#0f0e13;
+  background-color:#0c45e4;
   background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 100%, hsla(225,39%,25%,1) 0, transparent 50%);
+    radial-gradient(at 0% 0%, rgb(12, 69, 228) 0, transparent 50%), 
+    radial-gradient(at 50% 100%, rgb(251, 251, 251) 0, transparent 50%);
 }
 
 .gradient-bg-transactions {
@@ -61,14 +61,14 @@ body {
 }
 
 .eth-card {
-  background-color:#4c09e9;
+  background-color:#929292;
   background-image: 
-    radial-gradient(at 83% 67%, rgb(152, 231, 156) 0, transparent 58%), 
-    radial-gradient(at 67% 20%, hsla(357,94%,71%,1) 0, transparent 59%), 
-    radial-gradient(at 88% 35%, hsla(222,81%,65%,1) 0, transparent 50%), 
-    radial-gradient(at 31% 91%, hsla(9,61%,61%,1) 0, transparent 52%), 
-    radial-gradient(at 27% 71%, hsla(336,91%,65%,1) 0, transparent 49%), 
-    radial-gradient(at 74% 89%, rgb(52, 7, 214) 0, transparent 51%), 
+    radial-gradient(at 83% 67%, rgb(215, 215, 215) 0, transparent 58%), 
+    radial-gradient(at 67% 20%, rgb(8, 113, 129) 0, transparent 59%), 
+    radial-gradient(at 88% 35%, rgb(29, 48, 156) 0, transparent 50%), 
+    radial-gradient(at 31% 91%, rgb(34, 123, 146) 0, transparent 52%), 
+    radial-gradient(at 27% 71%, rgb(15, 151, 242) 0, transparent 49%), 
+    radial-gradient(at 74% 89%, rgb(27, 97, 176) 0, transparent 51%), 
     radial-gradient(at 53% 75%, hsla(174,94%,68%,1) 0, transparent 45%);
 }
 
