--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,10 +28,9 @@ body {
 }
 
 .gradient-bg-transactions {
-  background-color: #0f0e13;
+  background-color:#0c45e4;
   background-image: 
-    radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,25%,1) 0, transparent 50%);
+    radial-gradient(at 0% 0%, rgb(12, 69, 228) 0, transparent 50%)
 }
 
 .gradient-bg-footer {
